<resources>
    <!--App-->
    <string name="app_name">Moviemade</string>
    <!--Home-->
    <string name="title_home">Popular Movies</string>
    <string name="message_in_app_update_new_version_available">New version is available</string>
    <string name="action_update">Update</string>
    <!--Settings-->
    <string name="title_settings">Settings</string>
    <!--About-->
    <string name="title_about">About</string>




    <!--Main-->
    <string name="error_text">Error loading data. Please, check your internet connection and try again</string>
    <string name="button_retry_text">Retry</string>

    <string name="message_in_app_update_new_version_downloaded">Moviemade just downloaded an update</string>

    <string name="action_reload">Reload</string>
    <!--Movie-->
    <string name="menu_item_share">Share</string>
    <string name="movie_details_text">%s • %s</string>



    <!--account-->
    <string name="account">Account</string>
    <string name="logout">Log out</string>
    <string name="loading_login">Loading login…</string>
    <string name="loading_name">Loading name…</string>
    <string name="divider_or">OR</string>
    <string name="login_with_tmdb">Login with Themoviedb</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset_pass">Reset Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <!--favorites-->
    <string name="favorites">Favorites</string>
    <!--keywords-->
    <string name="keywords">Keywords</string>
    <string name="no_keywords">No keywords</string>
    <!--main-->
    <string name="menu_item_view">View</string>

    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_movies">No movies</string>
    <!--movie-->
    <string name="starring_only">Starring</string>
    <string name="directed_only">Directed by</string>
    <string name="written_only">Written by</string>
    <string name="produced_only">Produced by</string>
    <string name="starring">Starring %s</string>
    <string name="directed">Directed by %s</string>
    <string name="written">Written by %s</string>
    <string name="produced">Produced by %s</string>
    <string name="view_on_tmdb">View on TMDb</string>
    <string name="view_on_imdb">View on IMDb</string>
    <string name="view_homepage">View Homepage</string>
    <string name="no_overview">No Overview</string>
    <string name="loading_tagline">Loading tagline…</string>
    <string name="share_via">Share via</string>
    <string name="photo_of">1 of 1</string>
    <!--watchlist-->
    <string name="watchlist">Watchlist</string>
    <!--search-->
    <string name="search">Search</string>
    <string name="speak_now">Speak now</string>
    <string name="no_results">No results</string>
    <!--settings-->
    <string name="settings">Settings</string>
    <string name="include_adult">Include Adult</string>
    <string name="include_adult_summary">Toggle the inclusion of adult content</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="in_app_browser_summary">Open external links within the app</string>
    <!--about-->
    <string name="about">About</string>
    <string name="app_for_android">%1$s for Android</string>
    <string name="version_build_date">Version %1$s (Build %2$d) of %3$s</string>
    <string name="rate_google_play">Rate on Google Play</string>
    <string name="fork_github">Fork on Github</string>
    <string name="open_source_libs">Open-source Libraries</string>
    <string name="feedback">Feedback</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="other_developer_apps">Other Developer Apps</string>
    <string name="donate_paypal">Donate PayPal</string>
    <string name="powered_by">Powered by Themoviedb.org</string>

    <string name="update_available">Update is Available</string>
    <string name="update_available_summary">Download from Google Play</string>

    <string name="view_on_site">View on site</string>

    <string name="share_link">Share link</string>
    <string name="subject">Subject</string>
    <string name="no_people">No people</string>
    <string name="loading">loading…</string>
    <string name="none">None</string>
    <string name="runtime">%1$s / %2$d min</string>
    <string name="set_as_background">Set as account background</string>
    <string name="retry">RETRY</string>
    <!--Errors-->
    <string name="error_offline">You\'re offline</string>
    <string name="error_no_movies" >No movies to show</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_not_found">Resource is not found</string>
    <string name="error_empty_token">Authorized token is empty</string>
    <string name="error_invalid_data">Invalid Login or Password</string>
    <string name="error_empty_api_key">Please, add your TMDB_API_KEY into local.properties</string>
    <!--Actions-->
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <!--Messages-->
    <string name="msg_logout">Are you sure you want to log out?</string>
    <string name="msg_account_not_authorized">Your Themoviedb account is not authorized. \nPlease, sign in.</string>
    <string name="msg_done">Done</string>
    <string name="msg_check_internet">Please, check your internet connection and try again</string>
</resources>