<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="96dp"
    android:layout_marginBottom="56dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:background="?android:attr/windowBackground"
            tools:src="@mipmap/ic_launcher"/>

        <!--Username-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="?android:attr/colorForeground">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/username"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorHint"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="text"/>

        </androidx.cardview.widget.CardView>

        <!--Password-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="?android:attr/colorForeground">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/password"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorHint"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textPassword"/>

        </androidx.cardview.widget.CardView>

        <!--Reset Password-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/reset_pass"
            style="@style/Button.Borderless"/>

        <!--Sign in up-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <!--Sign up-->
            <androidx.cardview.widget.CardView
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="?android:attr/colorForeground">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?android:attr/colorBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:text="@string/sign_up"/>

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <!--Sign in-->
            <androidx.cardview.widget.CardView
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="?android:attr/colorForeground">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:text="@string/sign_in"/>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Divider-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="?android:attr/divider"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textColor="?android:attr/divider"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:text="@string/divider_or"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="?android:attr/divider"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Login-->
        <androidx.cardview.widget.CardView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="?android:attr/colorForeground">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/login_with_tmdb"/>

        </androidx.cardview.widget.CardView>

        <!--Terms and Privacy-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <!--Terms of Use-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/terms_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                style="@style/Button.Borderless"/>

            <!--Privacy Policy-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/privacy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                style="@style/Button.Borderless"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>