<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:background="@color/backgroundColor">

    <!--Cover-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_collapseMode="parallax"/>

    <!--Blur-->
    <FrameLayout
        android:id="@+id/blur_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/backdropBlur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--Avatar-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginText"
        tools:src="@mipmap/ic_launcher_round"/>

    <!--Login-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/loading_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:textColor="@color/textColorPrimary"/>

    <!--Name-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/loading_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        tools:textColor="@color/textColorPrimary"/>

    <!--Favorites-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favoritesText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="sans-serif-medium"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover"
        tools:textColor="@color/textColorPrimary"/>

    <!--Watchlist-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/watchlistText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="sans-serif-medium"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/watchlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoritesText"
        tools:textColor="@color/textColorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>