<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="96dp"
    android:layout_marginBottom="56dp"
    tools:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:background="?android:attr/windowBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/ic_launcher"/>

        <!--Username-->
        <androidx.cardview.widget.CardView
            android:id="@+id/usernameCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/foregroundColor">

            <org.michaelbel.moviemade.presentation.widget.WidgetEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/username"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorHint"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:background="@null"
                android:inputType="text"
                tools:textColorHint="@color/textColorHint"/>

        </androidx.cardview.widget.CardView>

        <!--Password-->
        <androidx.cardview.widget.CardView
            android:id="@+id/passwordCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/foregroundColor">

            <org.michaelbel.moviemade.presentation.widget.WidgetEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/password"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorHint"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:background="@null"
                android:inputType="textPassword"
                tools:textColorHint="@color/textColorHint"/>

        </androidx.cardview.widget.CardView>

        <!--Reset Password-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/reset_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCard"
            style="@style/Button.Borderless"/>

        <!--Sign up-->
        <androidx.cardview.widget.CardView
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_field_height"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetBtn"
            app:layout_constraintEnd_toStartOf="@id/signInBtn"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/foregroundColor">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/backgroundColor">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:text="@string/sign_up"
                    tools:textColor="@color/textColorPrimary"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <!--Sign in-->
        <androidx.cardview.widget.CardView
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_field_height"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            app:layout_constraintStart_toEndOf="@id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@id/resetBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/foregroundColor">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/sign_in"
                tools:textColor="@color/textColorPrimary"/>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="16dp"
            android:background="?android:attr/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/orText"
            app:layout_constraintEnd_toStartOf="@id/orText"
            app:layout_constraintBottom_toBottomOf="@id/orText"
            tools:background="@color/dividerColor"/>

        <!--OR-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="?android:attr/divider"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/divider_or"
            app:layout_constraintStart_toEndOf="@id/divider1"
            app:layout_constraintTop_toBottomOf="@id/signInBtn"
            app:layout_constraintEnd_toStartOf="@id/divider2"
            tools:textColor="@color/dividerColor"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:attr/divider"
            app:layout_constraintStart_toEndOf="@id/orText"
            app:layout_constraintTop_toTopOf="@id/orText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/orText"
            tools:background="@color/dividerColor"/>

        <!--Login-->
        <androidx.cardview.widget.CardView
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:foreground="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orText"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/foregroundColor">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/login_with_tmdb"
                tools:textColor="@color/textColorPrimary"/>

        </androidx.cardview.widget.CardView>

        <!--Terms of Use-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/termsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="@string/terms_of_use"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintEnd_toStartOf="@id/privacyBtn"
            style="@style/Button.Borderless"/>

        <!--Privacy Policy-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/privacyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_policy"
            app:layout_constraintStart_toEndOf="@id/termsBtn"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Button.Borderless"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>